# install-openclaw

./: .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-windows.yml
.kilo/plans/: 1775383791420-lucky-wizard.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/pages/: PageAbout.vue  PageCheckSystem.vue  PageInstall.vue  PageModels.vue  PagePlugins.vue  PageService.vue  PageSkills.vue  PageUninstall.vue  PageUpdate.vue
